# synergos_worker

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  config.py  database.json  datapipeline.py  environment.yml  initialise_server.py  main.py  pyproject.toml  requirements.txt  setup.py
apis/: connection.py
data/: database.json
data/edge_test_misalign/: .~lock.datapipeline_edgetest_dataset_missing_feature.csv#  datapipeline_edgetest_dataset_missing_feature.csv  schema.json
data/edge_test_missing_coecerable_vals/: wrong_formatted_dataset.csv
data/edge_test_na_slices/: datapipeline_edgetest_dataset_na_slice.csv
data/validation/: unified_dataset_validation_1000.csv
outputs/: catboost_training.json  learn_error.tsv  time_left.tsv
outputs/learn/: events.out.tfevents
rest_rpc/: __init__.py  align.py  initialise.py  poll.py  predict.py  terminate.py
rest_rpc/core/: __init__.py  custom.py  custom_server_worker.py  datapipeline.py  datetime_serialization.py  server.py  tabularpipe.py  utils.py
rest_rpc/core/node/: run.sh  (+1 more)
synergos_logger/: Dockerfile  README.md  SynergosLoggingExample.py  docker-compose.yml  filter_test.py  requirements.txt  setup.py
synergos_logger/HardwareStatsLogger/: HardwareStatsLogger.py  Sysmetrics.py  test.py
synergos_logger/SynergosLogger/: SynergosLogger.py  config.py  init_logging.py  syn_logger_config.py  test.py  test1.py  test2.py  test3.py
synergos_logger/misc/: content-pack-9bf6a388-394a-45bf-a7c9-39740d00ca15-1.json  notes
synergos_logger/psutil/: Sysmetrics.py  test.py
templates/: meta_schema.json  payload_schema.json
templates/base/: alignment_schema.json  export_schema.json  header_schema.json  metadata_schema.json  schema_schema.json  tag_schema.json
tests/: test_database.json  test_utils_MetaRecords.py
(+129 files in other folders)
