[tool.poetry]
name = "synergos.worker"
version = "0.0.1"
description = "Worker Node"
authors = ["aisingapore <contact@openmined.org>"]
license = "Apache-2.0"
packages = [{ include = "rest_rpc" }]

[tool.poetry.dependencies]
python = "^3.7 <3.8"
gevent = "^20.6.2"
gevent-websocket = "^0.10.1"
gunicorn = "^20.0.4"
Flask = "^1.1.1"
Flask-Sockets = "^0.2.1"
requests = "^2.22.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Cors = "^3.0.7"
Flask-Executor = "^0.9.3"
Flask-Login = "^0.5.0"
sqlalchemy_mixins = "^1.2.1"
pyjwt = "^1.7.1"
psycopg2-binary = "^2.8.5"
requests-toolbelt = "^0.9.1"
syft = "0.2.8"
syft-proto = "0.5.1"
redis = "^3.5.3"
sqlalchemy_utils = "^0.36.8"
numpy = "^1.18.5"
wsaccel = "^0.6.2"

aiohttp = "3.6.2"
beautifulsoup4 = "4.9.1"
catboost = "0.20.1"
contractions = "0.0.25"
diffprivlib = "0.1.1"
Flask-Restx = "0.2.0"
gensim = "3.8.3"
inflect = "4.1.0"
jsonschema = "3.2.0" 
mlflow = "1.7.2"
nltk = "3.5"
pandas = "0.25.3"
pathos = "0.2.5"
pillow = "6.2.2"
psutil = "5.7.0"
pycontractions = "2.0.1"
pytorch-ignite = "0.3.0"
ray = "0.7.7"
scikit-learn = "0.22.1"
scipy = "1.4.1"
spacy = "2.3.0"
statsmodels = "0.11.0"
symspellpy = "6.5.2"
textstat = "0.6.2"
torch = "1.4.0"
torchvision = "0.5.0"
tinydb = "3.15.2"
tinydb-serialization = "1.0.4" 
tinydb-smartcache = "1.0.2"
tinyrecord = "0.1.5"
tqdm = "4.40.2"
werkzeug = "1.0.1"
xgboost = "0.90"

[tool.poetry.dev-dependencies]
aiounittest = "^1.4.0"
black = "^19.10b0"
coverage = "^4.5.3"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
isort = "^5.0.5"
docformatter = "^1.3.1"
flake8 = "^3.8.3"
flake8-comprehensions = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
